--- a/index.css
+++ b/index.css
@@ -11,11 +11,13 @@ body{
 }
 .main-wrapper img{
     width: 100%;
-    display: block;
+    
 }
 .main-wrapper a{
     color: #000;
     text-decoration: none;
+    display: flex;
+    flex-direction: column ;
 }
 .main-wrapper ul li{
     list-style-type: none;
@@ -31,12 +33,15 @@ body{
     display: flex;
     flex-direction: column;
     z-index: 10;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding: 0 5rem;
 }
 .brand-and-icon{
-    display: flex;
-    justify-content: space-between;
     padding: 1rem 0;
-    border-bottom: 1px solid #ddd;
+    border-bottom: none;
 }
 .navbar-brand{
     font-size: 1.8rem;
@@ -50,56 +55,37 @@ body{
     font-size: 1.8rem;
     cursor: pointer;
     padding: 0.2rem 0.5rem;
-    transition: all 0.4s ease;
-    border: 2px solid #000;
-    border-radius: 4px;
 }
 .navbar-toggler:hover{
     opacity: 0.7;
 }
 .navbar-collapse{
-    overflow-y: scroll;
-    display: none;
+    display: flex;
+    overflow-y: hidden;
 }
 .navbar-nav > li > a{
-    text-transform: uppercase;
     font-size: 1.1rem;
     font-weight: 700;
-    display: block;
+    display: flex;
     padding: 0.6rem 0;
     margin: 0.2rem 0;
-    border-bottom: 1px solid #ddd;
-    border-radius: 1px;
     position: relative;
-    transition: all 0.4s ease;
+
 }
 .drop-icon{
     position: absolute;
     right: 10px;
     top: 50%;
-    transform: translateY(-50%);
 }
-.navbar-nav > li > a:hover{
-    opacity: 0.7;
-}
+
 .sub-menu h4{
-    text-transform: capitalize;
     font-size: 1rem;
     padding: 0.5rem 0;
 }
 .sub-menu ul li{
-    text-transform: capitalize;
     padding: 0.2rem 0;
     margin: 0.2rem 0;
     font-size: 0.95rem;
-}
-.sub-menu ul li a{
-    opacity: 0.8;
-    transition: all 0.5s ease;
-}
-.sub-menu ul li a:hover{
-    padding-left: 14px;
-    opacity: 0.9;
 }
 .sub-menu{
     display: none;
@@ -113,23 +99,19 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     padding-top: 2rem;
     padding-bottom: 2rem;
-}
-.sub-menu-item:nth-child(3) h2{
-    text-transform: capitalize;
-    margin: 1.5rem 0;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 .sub-menu-item:nth-child(3) .btn{
     border: 1px solid #000;
-    text-transform: uppercase;
     font-size: 0.9rem;
     padding: 0.6rem 1rem;
     cursor: pointer;
     background: #000;
     color: #fff;
-    transition: all 0.5s ease;
 }
 .sub-menu-item:nth-child(3) .btn:hover{
     background: transparent;
@@ -141,71 +123,12 @@ body{
     padding: 2rem 0;
 }
 
-
-
-/* Media Queries */
-@media screen and (min-width: 992px){
-    .navbar{
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        border-bottom: 1px solid #ddd;
-        padding: 0 5rem;
-        position: relative;
+.navbar-nav > li:hover .sub-menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15%;
     }
-    .navbar-toggler{
-        display: none;
-    }
-    .brand-and-icon{
-        flex: 0 0 100px;
-        border-bottom: none;
-        padding: 0;
-    }
-    .navbar-collapse{
-        display: block!important;
-        overflow-y: hidden;
-        flex: 1 0 auto;
-    }
-    .navbar-nav{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .navbar-nav > li > a{
-        border-bottom: none;
-        margin: 0 0.4rem;
-        padding: 1.7rem 1.8rem 1.7rem 0.8rem;
-        font-size: 0.8rem;
-    }
-    .sub-menu{
-        position: absolute;
-        left: 0;
-        width: 100%;
-        top: 100%;
-        background: #f8f8f8;
-    }
-    .navbar-nav > li:hover .sub-menu{
-        display: grid!important;
-        grid-template-columns: repeat(4, 1fr);
-        padding: 0 5rem;
-    }
-    .navbar-nav > li{
-        border-bottom: 2px solid transparent;
-        transition: border-bottom 0.4s ease;
-    }
-    .navbar-nav > li:hover{
-        border-bottom-color: #000;
-    }
-    .sub-menu-item{
-        padding-left: 0;
-    }
-    .sub-menu-item:nth-child(3){
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
-
-  
-}
 
 
 
