--- a/index.css
+++ b/index.css
@@ -1,139 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
 *{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
+    box-sizing: content-box;
 }
-body{
-    line-height: 1.4;
-}
-.main-wrapper img{
+
+header {
     width: 100%;
+    height: 100%;
+}
+
+.headerWrapper {
+    width: 100%;
+    height: 80px;
     
 }
-.main-wrapper a{
-    color: #000;
-    text-decoration: none;
-    display: flex;
-    flex-direction: column ;
-}
-.main-wrapper ul li{
-    list-style-type: none;
-}
-.navbar{
-    background: #fff;
-    padding: 0 1rem;
-    position: fixed;
-    top: 0;
-    left: 0;
+
+
+.navbarNav {
     width: 100%;
-    max-height: 100vh;
     display: flex;
-    flex-direction: column;
-    z-index: 10;
     flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    border-bottom: 1px solid #ddd;
-    padding: 0 5rem;
+    justify-content: space-around;
 }
-.brand-and-icon{
-    padding: 1rem 0;
-    border-bottom: none;
+
+.navbar ul li:hover {
+    color: red;
 }
-.navbar-brand{
-    font-size: 1.8rem;
-    letter-spacing: 3px;
-    font-weight: 700;
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    height: 50%;
 }
-.navbar-toggler{
+
+.navbar ul:after { 
+    content: "";
+    clear: both;
     display: block;
-    border: none;
-    background: transparent;
-    font-size: 1.8rem;
-    cursor: pointer;
-    padding: 0.2rem 0.5rem;
 }
-.navbar-toggler:hover{
-    opacity: 0.7;
-}
-.navbar-collapse{
-    display: flex;
-    overflow-y: hidden;
-}
-.navbar-nav > li > a{
-    font-size: 1.1rem;
-    font-weight: 700;
-    display: flex;
-    padding: 0.6rem 0;
-    margin: 0.2rem 0;
-    position: relative;
 
+.dropdownMenu {
+    font-weight: bold;
+    font-size: x-large;
 }
-.drop-icon{
+
+.dropdownMenu:before {
+    content: "";
+    display: inline-block;
+}
+
+.subMenu {
     position: absolute;
-    right: 10px;
-    top: 50%;
-}
-
-.sub-menu h4{
-    font-size: 1rem;
-    padding: 0.5rem 0;
-}
-.sub-menu ul li{
-    padding: 0.2rem 0;
-    margin: 0.2rem 0;
-    font-size: 0.95rem;
-}
-.sub-menu{
+    z-index: 1;
+    background-color: rgba(22, 20, 20, 0.883);
     display: none;
+    width: 100%;
+    left: 0;
+    top: 80px;
+    padding-bottom: 50px;
+    padding-top: 10px;
 }
 
-.sub-menu-item{
-    padding-left: 1.2rem;
-}
-.sub-menu-item:nth-child(3){
-    background: #ddd;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-.sub-menu-item:nth-child(3) .btn{
-    border: 1px solid #000;
-    font-size: 0.9rem;
-    padding: 0.6rem 1rem;
-    cursor: pointer;
-    background: #000;
-    color: #fff;
-}
-.sub-menu-item:nth-child(3) .btn:hover{
-    background: transparent;
-    color: #000;
-}
-.sub-menu-item:nth-child(4){
-    width: 50%;
-    margin: 0 auto;
-    padding: 2rem 0;
+h5 {
+    border-bottom: 1px solid white;
 }
 
-.navbar-nav > li:hover .sub-menu{
+.subMenu > .subMenuItem > ul {
+    float: left;
+}
+
+.navbar > ul > li:hover > .subMenu ,.subMenu:hover{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 15%;
-    }
+    gap: 5%;
+}
+
+.subMenuItem {
+    font-size: small;
+}
 
 
+.subMenuItem > ul:hover {
+    color: red;
+
+}
 
 
-
+/*header*/
 .homePic {
     background-image: linear-gradient(to top , rgba(0,0,0,943) 25%, rgba(0,0,0,0.5) 70%, rgba(0,0,0,0.2) 100%);
     width: 100%;
@@ -154,8 +106,6 @@ body{
     position: relative;
     z-index: -1;
 }
-
-
 
 .picCaption {
     display: flex;
