--- a/index.css
+++ b/index.css
@@ -10,15 +10,31 @@ header {
 .headerWrapper {
     width: 100%;
     height: 80px;
-    
+    line-height: 50px;
 }
+
+.logo {
+    padding-left: 5%;
+}
+
+.menuWrapper {
+    width: 100%;
+    display: flex; 
+    justify-content: flex-end;
+    padding-right: 20%;
+    gap: 5%;
+    height: 100%;
+    text-align: center;
+    height: 10vh;
+    font-size: 10vh;
+    line-height: 10vh;
+}
+
 
 
 .navbarNav {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
 }
 
 .navbar ul li:hover {
@@ -28,7 +44,6 @@ header {
 ul {
     list-style-type: none;
     padding: 0;
-    height: 50%;
 }
 
 .navbar ul:after { 
@@ -40,6 +55,7 @@ ul {
 .dropdownMenu {
     font-weight: bold;
     font-size: x-large;
+    padding-left: 20px;
 }
 
 .dropdownMenu:before {
@@ -57,17 +73,15 @@ ul {
     top: 80px;
     padding-bottom: 50px;
     padding-top: 10px;
+    line-height: 30px;
 }
 
 h5 {
+    text-align: center;
     border-bottom: 1px solid white;
 }
 
-.subMenu > .subMenuItem > ul {
-    float: left;
-}
-
-.navbar > ul > li:hover > .subMenu ,.subMenu:hover{
+.navbar > ul > div > li:hover > .subMenu ,.subMenu:hover{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -78,12 +92,15 @@ h5 {
     font-size: small;
 }
 
-
-.subMenuItem > ul:hover {
+.navbar > ul > div > li:hover > .subMenu > .subMenuItem > ul > li > a:hover {
     color: red;
-
 }
 
+.navbar > ul > div > li:hover > .subMenu > .subMenuItem > ul > li > a {
+    color: white;
+    text-decoration: none;
+    font-weight: normal;
+}
 
 /*header*/
 .homePic {
