--- a/index.css
+++ b/index.css
@@ -1,7 +1,18 @@
+@import url(//db.onlinewebfonts.com/c/69bf1da44c2af3ed36fa50016318d1f8?family=Porsche);
+@font-face {font-family: "Porsche"; src: url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.eot"); src: url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.woff") format("woff"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.svg#Porsche") format("svg"); }
+
+
 *{
     box-sizing: content-box;
+    font-family: Porsche;
 }
 
+body {
+    height: 100%;
+    width: 100%;
+}
+
+/*header*/
 header {
     width: 100%;
     height: 100%;
@@ -66,7 +77,7 @@ ul {
 .subMenu {
     position: absolute;
     z-index: 1;
-    background-color: rgba(22, 20, 20, 0.883);
+    background-color: rgba(13, 21, 27, 0.63);
     display: none;
     width: 100%;
     left: 0;
@@ -104,13 +115,15 @@ h5 {
 
 /*header*/
 .homePic {
-    background-image: linear-gradient(to top , rgba(0,0,0,943) 25%, rgba(0,0,0,0.5) 70%, rgba(0,0,0,0.2) 100%);
+    background-image: linear-gradient(-180deg,rgba(14,20,24,0) 0%,#0e1418 100%);
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    position: relative;
+    
 }
 
-.textArea {
+.textWrapper {
     z-index: 1;
     height: auto;
     width: 100%;
@@ -123,13 +136,18 @@ h5 {
     position: relative;
     z-index: -1;
 }
+.homePic .picCaption{
+    position: absolute; 
+    top: 65%;
+    z-index: 1;
+}
+
+.homePic img{
+    display:block;
+    max-width: 100%; 
+}
 
 .picCaption {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    top: 400px;
-    position: absolute;
     margin-left: 7%;
     
 }
@@ -142,6 +160,7 @@ h5 {
 
 section {
     box-sizing: border-box;
+    margin-left: 7%;
 }
 
 .row {
@@ -161,3 +180,7 @@ p {
     margin-top: 0;
     font-size: larger;
 }
+
+.ml-1 {
+    margin-left: 7% !important;
+  }
