--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
-@import url(//db.onlinewebfonts.com/c/69bf1da44c2af3ed36fa50016318d1f8?family=Porsche);
-@font-face {font-family: "Porsche"; src: url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.eot"); src: url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.woff") format("woff"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/69bf1da44c2af3ed36fa50016318d1f8.svg#Porsche") format("svg"); }
-
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 *{
     box-sizing: content-box;
@@ -26,6 +28,7 @@ header {
 
 .logo {
     padding-left: 5%;
+    padding-top: .5%;
 }
 
 .menuWrapper {
@@ -77,7 +80,7 @@ ul {
 .subMenu {
     position: absolute;
     z-index: 1;
-    background-color: rgba(13, 21, 27, 0.63);
+    background-color: rgba(0, 0, 0, 0.63);
     display: none;
     width: 100%;
     left: 0;
@@ -85,11 +88,16 @@ ul {
     padding-bottom: 50px;
     padding-top: 10px;
     line-height: 30px;
+    text-align: center;
 }
 
 h5 {
     text-align: center;
     border-bottom: 1px solid white;
+}
+
+.links {
+    padding-left: 0px;
 }
 
 .navbar > ul > div > li:hover > .subMenu ,.subMenu:hover{
@@ -111,9 +119,15 @@ h5 {
     color: white;
     text-decoration: none;
     font-weight: normal;
+    
 }
 
 /*header*/
+
+
+
+/*main*/
+
 .homePic {
     background-image: linear-gradient(-180deg,rgba(0, 0, 0, 0) 0%,#000000 100%);
     width: 100%;
@@ -169,7 +183,7 @@ section {
     margin-left: 7%;
 }
 
-.row {
+.rowContent {
     height: 100%;
     width: 100%;
     display: flex;
@@ -193,6 +207,7 @@ section {
 }
 
 .ml-1 {
+    padding-bottom: 6%;
     margin-left: 7%;
     margin-right: 7%;
 }
@@ -240,9 +255,12 @@ section {
     border-width: 0 1px 1px 0;
     display: inline-block;
     padding: 4px;
-    transform: rotate(-90deg);
-    -webkit-transform: rotate(-45deg);
+    
 }
+
+.right {
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-45deg);}
 
 .col-md-4:hover{
     cursor: pointer;
@@ -260,3 +278,155 @@ section {
     transform: rotate(-90deg);
     -webkit-transform: rotate(-45deg);
 } 
+
+/*main*/
+
+
+/*footer*/
+
+footer {
+    width: 100%;
+    height: auto;
+
+}
+
+.ml-2 {
+    padding-bottom: 1%;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+
+.rowFooter {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.footerWrapper{
+    width: 100%;
+    height: auto;
+    position: absolute;
+}
+
+.logo_language {
+    display: flex;
+    flex-direction: column;
+}
+
+.logoFooter {
+    width: 60%;
+    height: auto;
+}
+
+.languageWrapper {
+    position: relative;
+    width: 65%;
+    height: auto;
+}
+
+.languageWrapper input {
+    color: white;
+    position: absolute;
+    width: 75%;
+    height: auto;
+    background-color: black;
+    outline: none;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    border: 1px solid white;
+    padding: 4%;
+
+}
+
+.languageWrapper .options {
+    position: absolute;
+    padding-top: 23%;
+    overflow: hidden;
+    width: 75%;
+    display: none;
+    border: 1px solid white;
+    padding-left: 4%;
+   
+}
+
+.languageWrapper.active .options {
+    display: block;
+}
+
+.languageWrapper .options div{
+    width: 100%;
+    cursor: pointer;
+}
+
+.languageWrapper .options div:hover{
+    color: red; 
+    background-color: rgba(69, 78, 69, 0.305) 
+}
+
+.languageWrapper::before {
+    content: '';
+    position: absolute;
+    z-index: 10000;
+    right: 32%;
+    top: 12px;
+    cursor: pointer;
+    border: solid rgb(255, 255, 255);
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 4px;
+    -webkit-transform: rotate(45deg);
+    transition: 0.3s;
+}
+
+.languageWrapper.active::before {
+    transform: rotate(225deg);
+}
+
+label {
+    margin-top: 20%;
+    margin-bottom: 0;
+    font-size: large;
+}
+
+.info, .explanations {
+    color: rgb(151, 154, 151);
+    font-size: small;
+}
+
+.lowerFooter {
+    height: 100%;
+    margin-top: 1%;
+    border-top: 1px solid rgb(151, 154, 151);
+    font-size: small;
+}
+
+.lowerFooterText {
+    padding-top: 2%;
+    display: flex;
+}
+
+.leftSide {
+    width: 20%;
+}
+
+.rightSide {
+    width: 80%;
+    display: flex;
+    justify-content: end;
+
+}
+
+.rightSide > p {
+    font-weight: bold;
+    padding-left: 1%;
+}
+
+.rightSide > p:hover {
+    color: red;
+    cursor: pointer;
+}
+
+/*footer*/
