--- a/Analytics/analytics.css
+++ b/Analytics/analytics.css
@@ -1,11 +1,11 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-*{
-    font-family: Porsche;
+* {
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -22,29 +22,35 @@ header {
 .headerWrapper {
     width: 100%;
     height: 80px;
-    line-height: 50px;
 }
 
 .logo {
     padding-left: 5%;
-    padding-top: .5%;
+    margin-top: 12px;
+}
+
+.navbar > ul > li > h2 > a {
+    color: white;
+    text-decoration: none;
+    font-weight: normal
 }
 
 .menuWrapper {
     width: 100%;
-    display: flex; 
+    display: flex;
     justify-content: flex-end;
     height: 100%;
+
 }
 
-.dropdownWrapper {
+.linksWrapper {
     padding-right: 20%;
     text-align: center;
     height: 100%;
     display: flex;
-    gap: 5%;
-    height: 10vh;
-    font-size: 10vh;
+    gap: 20%;
+    height: 4vh;
+    font-size: 4vh;
     line-height: 8vh;
 }
 
@@ -54,7 +60,7 @@ header {
 }
 
 .navbar ul li:hover {
-    color: red;
+    cursor: pointer;
 }
 
 ul {
@@ -66,63 +72,24 @@ ul {
     font-weight: bold;
     font-size: x-large;
     padding-left: 20px;
-    
+
 }
 
-
-.subMenu {
-    position: absolute;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.63);
-    display: none;
-    width: 100%;
-    left: 0;
-    top: 80px;
-    padding-bottom: 50px;
-    padding-top: 10px;
-    line-height: 30px;
-    text-align: center;
-}
-
-h5 {
-    text-align: center;
-    border-bottom: 1px solid white;
-}
-
-.links {
-    padding-left: 0px;
-}
-
-.navbar > ul > div > div > li:hover > .subMenu ,.subMenu:hover{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 5%;
-}
-
-.subMenuItem {
-    font-size: small;
-}
-
-.navbar > ul > div > div > li:hover > .subMenu > .subMenuItem > ul > li > a:hover {
+.navbar>ul>div>div>li>a:hover {
     color: red;
 }
 
-.navbar > ul > div > div > li:hover > .subMenu > .subMenuItem > ul > li > a {
+.navbar>ul>div>div>li>a {
     color: white;
     text-decoration: none;
     font-weight: normal;
-    
-}
 
-/*header*/
+}
 
 
 /*main*/
 
 main {
-
-
     padding: 5% 7% 5% 7%;
 }
 
@@ -152,7 +119,7 @@ footer {
     justify-content: space-around;
 }
 
-.footerWrapper{
+.footerWrapper {
     width: 100%;
     height: auto;
     position: absolute;
@@ -198,22 +165,22 @@ footer {
     border: 1px solid white;
     padding-left: 4%;
     background-color: #000000;
-    
-   
+
+
 }
 
 .languageWrapper.active .options {
     display: block;
-    
+
 }
 
-.languageWrapper .options div{
+.languageWrapper .options div {
     width: 100%;
     cursor: pointer;
 }
 
-.languageWrapper .options div:hover{
-    color: red; 
+.languageWrapper .options div:hover {
+    color: red;
     background-color: rgba(78, 76, 76, 0);
 }
 
@@ -242,7 +209,8 @@ label {
     font-size: large;
 }
 
-.info, .explanations {
+.info,
+.explanations {
     color: rgb(151, 154, 151);
     font-size: small;
 }
@@ -275,12 +243,12 @@ label {
 
 }
 
-.rightSide > p {
+.rightSide>p {
     font-weight: bold;
     padding-left: 1%;
 }
 
-.rightSide > p:hover {
+.rightSide>p:hover {
     color: red;
     cursor: pointer;
 }
@@ -289,45 +257,48 @@ label {
 
 /*footer*/
 
-@media only screen and (max-width: 1360px){
+@media only screen and (max-width: 1360px) {
     .leftSide {
         width: 40%;
     }
 }
 
-@media only screen and (max-width: 1300px){
-    .logoFooter{
+@media only screen and (max-width: 1300px) {
+    .logoFooter {
         width: 90%;
     }
-    
+
     .rowFooter {
         display: flex;
         flex-direction: column;
         width: 2000px;
     }
+
     .languageWrapper {
         margin-bottom: 5%;
         width: 40%;
     }
+
     .logoFooter {
         width: 40%;
     }
 }
 
-@media only screen and (max-width: 1130px)
-
-{
+@media only screen and (max-width: 1130px) {
     .rightSide {
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
     }
+
     .logoFooter {
         width: 70%;
     }
+
     .languageWrapper {
         width: 50%;
     }
+
     .logoFooter {
         width: 50%;
     }
@@ -347,13 +318,14 @@ label {
         margin-bottom: 5%;
         width: 50%;
     }
+
     .logoFooter {
         width: 50%;
     }
 
 }
 
-@media only screen and (max-width: 960px){
+@media only screen and (max-width: 960px) {
     .leftSide {
         width: 50%;
     }
@@ -363,15 +335,17 @@ label {
         flex-direction: column;
         width: 1450px;
     }
+
     .logoFooter {
         width: 70%;
     }
 }
+
 @media only screen and (max-width: 900px) {
     .lowerFooterText {
         display: block;
     }
-    
+
     .rightSide {
         width: 100%;
     }
@@ -381,12 +355,13 @@ label {
         flex-direction: column;
         width: 1400px;
     }
-}  
+}
+
 @media only screen and (max-width: 830px) {
     .lowerFooterText {
         display: block;
     }
-    
+
     .rightSide {
         width: 100%;
     }
@@ -396,35 +371,32 @@ label {
         flex-direction: column;
         width: 1300px;
     }
+
     .logoFooter {
         width: 70%;
     }
 }
 
 @media only screen and (max-width: 700px) {
-    .menuWrapper{
+    .menuWrapper {
         cursor: pointer;
     }
-    
-    .dropdownWrapper { 
-        display: none   ;
-        margin-top: 20%;
+
+    .linksWrapper {
+        display: none;
+        margin-top: 15%;
         padding-right: 3%;
         text-align: right;
         z-index: 2;
-        
     }
 
-    .dropdownMenu {
-        line-height: 5vh;
-    }
-    .menuWrapper::before{
+    .menuWrapper::before {
         position: absolute;
         content: '';
         cursor: pointer;
         border: solid rgb(255, 255, 255);
         border-width: 0 10px 10px 0;
-        top: 20%;
+        top: 15%;
         display: inline-block;
         right: 5%;
         -webkit-transform: rotate(45deg);
@@ -432,25 +404,20 @@ label {
         z-index: 10000;
     }
 
-    .navbar > ul > div > div > li:hover > .subMenu{
-        display: block;
-        width: 80%;
-       
-    }
-       
     .navbar ul li:hover {
         color: red;
         cursor: pointer;
     }
-    
-    .menuWrapper.active .dropdownWrapper {
+
+    .menuWrapper.active .linksWrapper {
         display: block;
     }
+
 
     label {
         margin-top: 5%;
     }
-    
+
     .logo_language {
         margin-bottom: 12%;
     }
@@ -463,6 +430,7 @@ label {
     .rowFooter {
         width: 850px;
     }
+
     .logoFooter {
         width: 80%;
     }
