--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -5,7 +5,7 @@
 }
 
 *{
-    font-family: Porsche;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -22,12 +22,17 @@ header {
 .headerWrapper {
     width: 100%;
     height: 80px;
-    line-height: 50px;
 }
 
 .logo {
     padding-left: 5%;
-    padding-top: .5%;
+    margin-top: 12px;
+}
+
+.navbar > ul > li > h2 > a {
+    color: white;
+    text-decoration: none;
+    font-weight: normal
 }
 
 .menuWrapper {
@@ -35,16 +40,17 @@ header {
     display: flex; 
     justify-content: flex-end;
     height: 100%;
+    
 }
 
-.dropdownWrapper {
+.linksWrapper {
     padding-right: 20%;
     text-align: center;
     height: 100%;
     display: flex;
-    gap: 5%;
-    height: 10vh;
-    font-size: 10vh;
+    gap: 20%;
+    height: 4vh;
+    font-size: 4vh;
     line-height: 8vh;
 }
 
@@ -54,7 +60,7 @@ header {
 }
 
 .navbar ul li:hover {
-    color: red;
+    cursor: pointer;
 }
 
 ul {
@@ -69,46 +75,11 @@ ul {
     
 }
 
-
-.subMenu {
-    position: absolute;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.63);
-    display: none;
-    width: 100%;
-    left: 0;
-    top: 80px;
-    padding-bottom: 50px;
-    padding-top: 10px;
-    line-height: 30px;
-    text-align: center;
-}
-
-h5 {
-    text-align: center;
-    border-bottom: 1px solid white;
-}
-
-.links {
-    padding-left: 0px;
-}
-
-.navbar > ul > div > div > li:hover > .subMenu ,.subMenu:hover{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 5%;
-}
-
-.subMenuItem {
-    font-size: small;
-}
-
-.navbar > ul > div > div > li:hover > .subMenu > .subMenuItem > ul > li > a:hover {
+.navbar > ul > div > div > li > a:hover  {
     color: red;
 }
 
-.navbar > ul > div > div > li:hover > .subMenu > .subMenuItem > ul > li > a {
+.navbar > ul > div > div > li > a {
     color: white;
     text-decoration: none;
     font-weight: normal;
@@ -116,7 +87,6 @@ h5 {
 }
 
 /*header*/
-
 
 /*main*/
 
@@ -406,36 +376,26 @@ label {
         cursor: pointer;
     }
     
-    .dropdownWrapper { 
+    .linksWrapper { 
         display: none   ;
-        margin-top: 20%;
+        margin-top: 15%;
         padding-right: 3%;
         text-align: right;
         z-index: 2;
-        
     }
 
-    .dropdownMenu {
-        line-height: 5vh;
-    }
     .menuWrapper::before{
         position: absolute;
         content: '';
         cursor: pointer;
         border: solid rgb(255, 255, 255);
         border-width: 0 10px 10px 0;
-        top: 20%;
+        top: 15%;
         display: inline-block;
         right: 5%;
         -webkit-transform: rotate(45deg);
         transition: 0.3s;
         z-index: 10000;
-    }
-
-    .navbar > ul > div > div > li:hover > .subMenu{
-        display: block;
-        width: 80%;
-       
     }
        
     .navbar ul li:hover {
@@ -443,9 +403,10 @@ label {
         cursor: pointer;
     }
     
-    .menuWrapper.active .dropdownWrapper {
+    .menuWrapper.active .linksWrapper {
         display: block;
     }
+
 
     label {
         margin-top: 5%;
