--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -1,11 +1,20 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url(./font/Roboto/Roboto-Thin.ttf);
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url(./font/Roboto/Roboto-Bold.ttf);
+    font-weight: bold;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-*{
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -379,8 +388,9 @@ label {
     }
     
     .linksWrapper { 
+        font-size: larger;
         display: none   ;
-        margin-top: 15%;
+        margin-top: 3%;
         padding-right: 3%;
         text-align: right;
         z-index: 2;
