--- a/index.css
+++ b/index.css
@@ -1,12 +1,23 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url(./font/Roboto/Roboto-Thin.ttf);
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url(./font/Roboto/Roboto-Bold.ttf);
+    font-weight: bold;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
-*{
-    font-family: 'Roboto', sans-serif;
-}
+
 
 body {
     height: 100%;
@@ -20,6 +31,7 @@ header {
 }
 
 .headerWrapper {
+    
     width: 100%;
     height: 80px;
 }
@@ -36,6 +48,7 @@ header {
 }
 
 .menuWrapper {
+    font-weight: 500;
     width: 100%;
     display: flex; 
     justify-content: flex-end;
@@ -44,6 +57,7 @@ header {
 }
 
 .linksWrapper {
+    font-weight: 500;
     padding-right: 20%;
     text-align: center;
     height: 100%;
@@ -69,7 +83,6 @@ ul {
     font-weight: bold;
     font-size: x-large;
     padding-left: 20px;
-    
 }
 
 .navbar > ul > div > div > li > a:hover  {
@@ -79,7 +92,7 @@ ul {
 .navbar > ul > div > div > li > a {
     color: white;
     text-decoration: none;
-    font-weight: normal;
+    font-weight: bold;
     
 }
 
@@ -524,8 +537,9 @@ label {
     }
     
     .linksWrapper { 
+        font-size: larger;
         display: none   ;
-        margin-top: 15%;
+        margin-top: 3%;
         padding-right: 3%;
         text-align: right;
         z-index: 2;
@@ -552,6 +566,7 @@ label {
     
     .menuWrapper.active .linksWrapper {
         display: block;
+
     }
 
     .quote {
